--- a/Bibliography/bib_julia2.bib
+++ b/Bibliography/bib_julia2.bib
@@ -1,5 +1,5 @@
 % Encoding: UTF-8
-@STRING{marta = {Marta Estela Mejail}}
+@STRING{Julia = {Julia Cassetti}}
 @INPROCEEDINGS{DBLP:conf/sibgrapi/GambiniRBMJ08,
 	author = {Gambini, J. and Rozichner, D. and Buemi, M. and
 	Mejail, M. and Jacobo-Berlles, J.},
@@ -1924,7 +1924,7 @@
 	owner = {Administrador},
 	timestamp = {2007.03.22}
 }
-@INPROCEEDINGS{1996SPIE.2765..448J,
+@INPROCEEDINGS{Janssen1996,
 	author = {{Janssen}, Y.~H. and {de Jong}, A.~N. and {Winkel}, H. and {van Putten},
 	F.~J.},
 	title = {{Detection of surface-laid and buried mines with IR and CCD cameras:
@@ -4788,18 +4788,13 @@
 	eprint = {http://dx.doi.org/10.1080/01431161.2013.808778}
 }
 @phdthesis{libengue2013,
-	TITLE = {{Non parametric method of mixed associated kernels and applications}},
+	TITLE = {Non parametric method of mixed associated kernels and applications},
 	AUTHOR = {F. Libengu{\'e} Dob{\'e}l{\'e}-Kpoka},
 	URL = {https://tel.archives-ouvertes.fr/tel-01124288},
 	NUMBER = {2013BESA2007},
 	SCHOOL = {{Universit{\'e} de Franche-Comt{\'e}}},
 	YEAR = {2013},
 	MONTH = Jun,
-	KEYWORDS = {Unimodal kernel ; Time-scales ; Nonparametric kernel estimation ; Mixture model ; Mixed density ; Dispersion parameter ; Cross-validation ; Boundary effect ; Asymmetric kernel ; Validation crois{\'e}e ; Param{\`e}tre de dispersion ; Noyau uni-modal ; Mod{\`e}le de m{\'e}lange ; Estimation non-param{\'e}trique par noyau ; Effet de bords ; {\'E}chelles de temps ; Convergence ; Densit{\'e} mixte},
-	TYPE = {Theses},
-	PDF = {https://tel.archives-ouvertes.fr/tel-01124288/file/2013BESA2007.pdf},
-	HAL_ID = {tel-01124288},
-	HAL_VERSION = {v1},
 }
 @article{Tur1982,
 	author = {Tur, M and Chin, K.C. and Goodman, Joseph},
@@ -4841,6 +4836,7 @@
 	year={1993},
 	abstract={This paper analyses various estimators for characterizing synthetic aperture radar clutter textures. First, we consider maximum likelihood estimators, which require specific knowledge of the form of the probability distribution of the data but would be expected to yield the best performance. Both K- and Weibull-distributed clutter models, which are often applied to characterize natural SAR clutter, are considered. Though a full maximum likelihood solution is impossible for the K distribution, we derive an approximate one for the multi-look case. We next derive expressions for limiting errors in a variety of direct texture estimators and compare their predicted performance with the maximum likelihood estimates in a search for robust, optimum texture estimators.}
 }
+
 @ARTICLE{Li2011,
 	author={H. C. Li and W. Hong and Y. R. Wu and P. Z. Fan},
 	journal={IEEE Journal of Selected Topics in Signal Processing},
@@ -4853,6 +4849,7 @@
 	doi={10.1109/JSTSP.2011.2138675},
 	ISSN={1932-4553},
 	month={June},}
+
 @ARTICLE{Planinsic2018,
 	author={P. Planinšič and D. Gleich},
 	journal={IEEE Geoscience and Remote Sensing Letters},
@@ -4911,24 +4908,21 @@
 	pages = {663-670},
 	year  = {1981},
 	publisher = {Taylor & Francis},
-	doi = {10.1080/01621459.1981.10477701},
-	
+	doi = {10.1080/01621459.1981.10477701},	
 	URL = { 
-	http://amstat.tandfonline.com/doi/abs/10.1080/01621459.1981.10477701
-	
-	},
+	http://amstat.tandfonline.com/doi/abs/10.1080/01621459.1981.10477701},
 	eprint = { 
 	http://amstat.tandfonline.com/doi/pdf/10.1080/01621459.1981.10477701
-	
-	}
-	
+	}	
 }
+
 @BOOK{KullbackBook1968,
 	title = {Information Theory and Statistics},
 	publisher = {Dover Publications},
 	year = {1968},
 	author = {Kullback, S.}
 }
+
 @article{Parr1980,
 	author = { W. C.   Parr  and  W R.   Schucany },
 	title = {Minimum Distance and Robust Estimation},
@@ -4939,17 +4933,12 @@
 	year  = {1980},
 	publisher = {Taylor & Francis},
 	doi = {10.1080/01621459.1980.10477522},
-	
 	URL = { 
-	http://amstat.tandfonline.com/doi/abs/10.1080/01621459.1980.10477522
-	
-	},
+	http://amstat.tandfonline.com/doi/abs/10.1080/01621459.1980.10477522},
 	eprint = { 
-	http://amstat.tandfonline.com/doi/pdf/10.1080/01621459.1980.10477522
-	
-	}
-	
+	http://amstat.tandfonline.com/doi/pdf/10.1080/01621459.1980.10477522}	
 }
+
 @INPROCEEDINGS{Chan2017,
 	author={D. {Chan} and A. {Rey} and J. {Gambini} and J. {Cassetti} and A. C. {Frery}},
 	booktitle={2017 IEEE International Geoscience and Remote Sensing Symposium (IGARSS)},
@@ -5207,7 +5196,7 @@
 }
 @inbook{Nicolas2010,
 	author = {Nicolas, J.M. and Adragna, F.},
-	publisher = {John Wiley & Sons, Ltd},
+	publisher = {John Wiley and Sons, Ltd},
 	isbn = {9780470611111},
 	title = {The Principles of Synthetic Aperture Radar},
 	booktitle = {Processing of Synthetic Aperture Radar Images},
@@ -5525,7 +5514,9 @@
 	keywords={Image segmentation;Support vector machines;Radar polarimetry;Synthetic aperture radar;Training;Estimation;Data models;Gaussian mixture;log-cumulants;support vector machine (SVM);synthetic aperture radar (SAR) image segmentation.},
 	doi={10.1109/LGRS.2019.2941075},
 	ISSN={1558-0571},
-	month={},}
+	month={},
+}
+
 @article{kokonendji2018,
   author  = {C. Kokonendji and F. {Libengu\'e Dob\'el\'e-Kpoka}},
 journal = {African Diaspora Journal of Mathematics},
@@ -5564,6 +5555,7 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	doi       = {10.1007/s40815-019-00654-6},
 	publisher = {Springer Science and Business Media {LLC}},
 }
+
 @article{SamplingfromtheGI0Distribution2018,
 	Author = {D. Chan and A. Rey and J. Gambini and A. C. Frery},
 	Doi = {https://doi.org/10.1515/mcma-2018-2023},
@@ -5573,16 +5565,7 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	Title = {Sampling from the $\mathcal{G}_{I}^0$ Distribution},
 	Volume = {24},
 	Year = {2018},
-	Bdsk-Url-1 = {https://doi.org/10.1515/mcma-2018-2023}}
-
-@Article{h-phiEntropyDifferentialMetric1997,
-	author  = {M. L. Men\'endez and D. Morales and L. Pardo and M. Salicr\'u},
-	journal = {Applications of Mathematics},
-	pages   = {81--98},
-	title   = {($h$-$\phi$)-entropy differential metric},
-	volume  = {42},
-	year    = {1997},
-	number  = {2},
+	Bdsk-Url-1 = {https://doi.org/10.1515/mcma-2018-2023},
 }
 
 @Article{salicruetal1993,
@@ -5592,7 +5575,7 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	Pages                    = {2015--2031},
 	Volume                   = {22},
 	Year                     = {1993},
-	Number                   = {7}
+	Number                   = {7},
 }
 
 
@@ -5604,3 +5587,47 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	url    = {https://www.researchgate.net/profile/Jan_Beirlant/publication/243768404_Nonparametric_Entropy_Estimation_An_Overview/links/0046352937863d9023000000/Nonparametric-Entropy-Estimation-An-Overview.pdf},
 }
 
+@Article{White1991,
+	author = { R. G. White },
+	title = {Change detection in {SAR} imagery},
+	journal = {International Journal of Remote Sensing},
+	volume = {12},
+	number = {2},
+	pages = {339--360},
+	year  = {1991},
+	publisher = {Taylor & Francis},
+	doi = {10.1080/01431169108929656},
+	URL = {	https://doi.org/10.1080/01431169108929656},
+}
+
+@Article{Menendez1997,
+	author  = {M. L. Men\'endez and D. Morales and L. Pardo and M. Salicr\'u},
+	journal = {Applications of Mathematics},
+	pages   = {81--98},
+	title   = {($h$-$\phi$)-entropy differential metric},
+	volume  = {42},
+	year    = {1997},
+	number  = {2},
+}
+
+@book{Michalowicz2018,
+	author = {Michalowicz, J. and Nichols, J. and Bucholtz, F.},
+	year = {2018},
+	pages = {244},
+	title = {Handbook of Differential Entropy},
+	publisher= {Chapman and Hall/CRC },
+	isbn = {9781138374799}
+}
+
+@article{Wu1997,
+	title = "A Cross-Validation Bandwidth Choice for Kernel Density Estimates with Selection Biased Data",
+	journal = "Journal of Multivariate Analysis",
+	volume = "61",
+	number = "1",
+	pages = "38 - 60",
+	year = "1997",
+	issn = "0047-259X",
+	doi = "https://doi.org/10.1006/jmva.1997.1659",
+	url = "http://www.sciencedirect.com/science/article/pii/S0047259X97916596",
+	author = "Wu, C.",
+}
