--- a/Bibliography/bib_julia2.bib
+++ b/Bibliography/bib_julia2.bib
@@ -5491,7 +5491,7 @@
 	month={Sep.},}
 
 @Article{Carvalho2019,
-	AUTHOR = {Carvalho, N. and Sant'Anna Bins, L. and Siqueira Sant'Anna, S.},
+	AUTHOR = {Carvalho, N. and Sant'Anna Bins, L. and Sidnei S. Sant'Anna},
 	TITLE = {Analysis of Stochastic Distances and {W}ishart Mixture Models Applied on {PolSAR} Images},
 	JOURNAL = {Remote Sensing},
 	VOLUME = {11},
@@ -5528,13 +5528,7 @@ pages   = {87--97},
 volume  = {1},
 url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 }
-@Article{AGeneralizedGaussianCoherentScattererModelforCorrelatedSARTexture,
-	author  = {D.-X. Yue and F. Xu and A. C. Frery and Y.-Q. Jin},
-	journal = {IEEE Transactions on Geoscience and Remote Sensing},
-	title   = {A Generalized {G}aussian Coherent Scatterer Model for Correlated {SAR} Texture},
-	year    = {2020},
-	doi     = {10.1109/TGRS.2019.2958125},
-}
+
 @Article{Monserrat2014,
 	author    = {O. Monserrat and M. Crosetto and G. Luzi},
 	journal   = {{ISPRS} Journal of Photogrammetry and Remote Sensing},
@@ -5630,4 +5624,18 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	doi = "https://doi.org/10.1006/jmva.1997.1659",
 	url = "http://www.sciencedirect.com/science/article/pii/S0047259X97916596",
 	author = "Wu, C.",
+}
+
+
+@Article{AGeneralizedGaussianCoherentScattererModelforCorrelatedSARTexture,
+	author  = {D.-X. Yue and F. Xu and A. C. Frery and Y.-Q. Jin},
+	journal = {IEEE Transactions on Geoscience and Remote Sensing},
+	title   = {A Generalized {G}aussian Coherent Scatterer Model for Correlated {SAR} Texture},
+	year    = {2020},
+	month   = apr,
+	number  = {4},
+	pages   = {2947--2964},
+	volume  = {58},
+	doi     = {10.1109/TGRS.2019.2958125},
+	groups  = {Journal Article},
 }
